[tool.poetry]
name = "selenium-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.69"
langchain-ollama = "^0.2.3"
langchain-core = "^0.3.33"
langchain-community = "^0.3.16"
langchain-experimental = "^0.3.4"
selenium = "^4.28.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
